# blueband-db

./: .gitignore  Cargo.toml  README.md  blueband_rust.did  cargo.toml  dfx.json  mops.toml  package.json  test.ts  tsconfig.json
.github/workflows/: deploy-docs.yml  release.yml
docs/: README.md  _navbar.md  _sidebar.md  architecture.md  index.html  package.json  styles.css
docs/api/: collection-management.md  document-management.md  vector-search.md
src/: export.rs  lib.rs  types.rs
src/blueband-compute/: Cargo.toml  blueband_compute.did
src/blueband-compute/src/: lib.rs
src/blueband-db/: BluebandProvider.mo  ComputeProvider.mo  OpenAIEmbeddings.mo  Types.mo  Utils.mo  embeddings.mo  main.mo
src/blueband-db/bucket/: Bucket.mo  BucketProvider.mo  Types.mo
src/blueband-db/collection/: collectionManager.mo
src/blueband-db/governance/: TokenInterface.mo  execution.mo  proposals.mo
src/blueband-db/utils/: TypeConversion.mo
src/clanopedia_frontend/: index.html  package.json  vite.config.js
src/clanopedia_frontend/src/: App.tsx  index.scss
src/clanopedia_frontend/src/components/: index.tsx
src/clanopedia_frontend/src/hooks/: useAuth.ts  useCollections.ts
src/clanopedia_frontend/src/providers/: AuthProvider.tsx
src/clanopedia_frontend/src/store/: collectionsStore.ts
src/clanopedia_frontend/src/utils/: documentProcessor.ts
src/compute/: cache.rs  embeddings.rs  mod.rs  similarity.rs
src/storage/: collections.rs  documents.rs  memory.rs  mod.rs  vectors.rs
src/test/: governance_test.mo
src/test-token/: main.mo
(+22 files in other folders)
