[package]
name = "blueband_rust"
version = "0.1.91"
edition = "2021"
description = "Blueband Vector DB - Rust Implementation with Stable Storage"

[lib]
name = "blueband_rust"        
crate-type = ["cdylib", "rlib"] 

[dependencies]
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
bincode = "1.3"
sha2 = "0.10"

[[bin]]
name = "export"
path = "src/export.rs"

[features]
default = []
export = []


[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1
