[package]
name = "blueband-compute"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
candid = "0.10.4"
ic-stable-structures = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros", "sync"] }